# git_Api

./: README.md
API express/: README.md  Untitled-1.pgsql  await pool.pgsql  docker-compose.yml  initDB.js  insert_monster.sql  package-lock.json  package.json  server.js
MI-First-FastAPI-main/: .gitignore  README.md  pyproject.toml  requirements.txt  seed.py
MI-First-FastAPI-main/app/: main.py
MI-First-FastAPI-main/app/api/v1/: routes.py
MI-First-FastAPI-main/app/core/: config.py
MI-First-FastAPI-main/app/db/: session.py
MI-First-FastAPI-main/app/schemas/: __init__.py  game.py  item.py
